--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="robots" content="index, follow">
     <meta property="og:image" content="https://netflix-1uh.pages.dev/og.jpg" />
     <meta name="description" content="Откройте и смотрите свои любимые фильмы и телепередачи с NETFLIX KE PITAJI - веб-сайтом по поиску и просмотру контента с открытым исходным кодом. Наслаждайтесь неограниченным доступом к огромной библиотеке контента бесплатно.">
-    <title>NETFLIX</title>
+    <title>Reel Time</title>
     <link rel="preload stylesheet" href="style.min.css" as="style">
     <link rel="preload stylesheet" href="center-atom.min.css" as="style">
     <!-- Google tag (gtag.js) -->
