--- a/registration.html
+++ b/registration.html
@@ -55,6 +55,45 @@
         h1, p {
             color: white;
         }
+        @media only screen and (min-width: 1400px) {
+          h1 {
+        font-size: 3vw;
+        }
+        .registration-container{
+            margin-top: 10%;
+        }
+    
+   
+        }
+        @media (max-width:1387px){
+            .registration-container{
+                margin-top: 12%;
+            }
+        }
+        @media (max-width:900px){
+            .registration-container{
+                margin-top: 18%;
+            }
+        }
+        @media (max-width:780px) {
+            .registration-container{
+                width: 45%;
+                margin-top: 23%;
+            }
+            .form-group input{
+                width: 44vw !important;
+            }
+            @media (max-width:500px) {
+            .registration-container{
+                width: 58%;
+                margin-top: 32%;
+            }
+            .form-group input{
+                width: 56vw !important;
+            }
+    
+    }}
+
     </style>
 </head>
 
