--- a/contact.html
+++ b/contact.html
@@ -179,7 +179,7 @@
         
         <h2>Свяжитесь с нами</h2>
 
-        <p>В NETFLIX мы ценим ваш отзыв и всегда готовы помочь. Если у вас есть вопросы, замечания или предложения, не стесняйтесь обращаться к нам.</p>
+        <p>В Reel Time мы ценим ваш отзыв и всегда готовы помочь. Если у вас есть вопросы, замечания или предложения, не стесняйтесь обращаться к нам.</p>
 
         <p>Вы можете связаться с нами следующими способами:</p>
 
@@ -188,6 +188,79 @@
         <p>Если вы предпочитаете общаться по электронной почте, вы можете связаться с нами по адресу ermacareer@gmail.com. Мы сделаем все возможное, чтобы ответить на ваш запрос как можно скорее.</p>
 
     </div>
+    <script>
+        // Function to update the login link based on the login status
+        function updateLoginLink() {
+            const username = localStorage.getItem('username');
+            const loginLink = document.getElementById('login-link');
+  
+            if (username) {
+                loginLink.textContent = `Привет, ${username}`;
+                loginLink.href = ''; // Clear the href attribute
+            } else {
+                loginLink.textContent = 'Войти';
+                loginLink.href = './login.html'; // Set the href attribute to login.html
+            }
+        }
+  
+        // Update the login link when the page is loaded
+        window.onload = updateLoginLink;
+  
+        // Clear the username from localStorage on project restart
+        window.addEventListener('beforeunload', function () {
+            localStorage.removeItem('username');
+        });
+  
+        // Add event listener to the registration form submit event
+        document.getElementById('registrationForm').addEventListener('submit', function (e) {
+            e.preventDefault();
+  
+            const username = document.getElementById('username').value;
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
+            const confirmPassword = document.getElementById('confirm_password').value;
+  
+            if (password !== confirmPassword) {
+                alert('Пароли не совпадают.');
+                return;
+            }
+  
+            // Retrieve existing users from localStorage
+            let users = JSON.parse(localStorage.getItem('users')) || [];
+  
+            // Check if username already exists
+            if (users.some(user => user.username === username)) {
+                alert('Имя пользователя уже существует.');
+                return;
+            }
+  
+            // Add the new user to the list
+            users.push({ username, email, password });
+            localStorage.setItem('users', JSON.stringify(users));
+  
+            // Store the username in localStorage
+            localStorage.setItem('username', username);
+  
+            // Redirect to index.html
+            window.location.href = 'index.html';
+        });
+  
+        // Function to toggle the menu display
+        function toggleMenu() {
+            const navbarLeft = document.querySelector('.navbar-left');
+            const navbarRight = document.querySelector('.navbar-right');
+            navbarLeft.style.display = navbarLeft.style.display === 'flex' ? 'none' : 'flex';
+            navbarRight.style.display = navbarRight.style.display === 'flex' ? 'none' : 'flex';
+        }
+  
+        // Initially open the menu on media devices
+        if (window.matchMedia('(max-width: 768px)').matches) {
+            const navbarLeft = document.querySelector('.navbar-left');
+            const navbarRight = document.querySelector('.navbar-right');
+            navbarLeft.style.display = 'flex';
+            navbarRight.style.display = 'flex';
+        }
+    </script>
 </body>
 
 </html>
